Examples/helloworld/slainte-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: slainte
  name: slainte
spec:
  finalizers:
    - kubernetes
---
