Examples/helloworld/hello-world-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: slainte
  name: hello-world-svc
  labels:
    app: hello-world-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: hello-world
      targetPort: 8080
      protocol: TCP
  selector:
    app: hello-world-app
---
